fixed style issue on mobile checkout

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3302,6 +3302,7 @@ label {
 
     .checkout__header .container {
         padding-left: 2em;
+        padding-right: 2em;
     }
 
     .container.is--flex.is--checkout {
